# stream-attn-dam

./: 1024_result.txt  16384_result.txt  2048_result.txt  32768_result.txt  4096_result.txt  512_result.txt  8192_result.txt  Cargo.toml  DAM_sweep.sh  bounded_seq_agnostic_attn.sh  compare_spatial.sh  seq_agnostic_1024.txt  seq_agnostic_16384.txt  seq_agnostic_2048.txt  seq_agnostic_32768.txt  seq_agnostic_4096.txt  seq_agnostic_512.txt  seq_agnostic_8192.txt  seq_agnostic_attn.sh  speedup_breakdown.sh  speedup_calc.py  unbound_seq_agnostic_1024.txt  unbound_seq_agnostic_16384.txt  unbound_seq_agnostic_2048.txt  unbound_seq_agnostic_32768.txt  unbound_seq_agnostic_4096.txt  unbound_seq_agnostic_512.txt  unbound_seq_agnostic_8192.txt  unbounded_seq_agnostic_attn.sh
src/: lib.rs
src/node/: flashattn_binary_op.rs  flashattn_running_op.rs  mod.rs  streamattn_bin.rs  streamattn_matvec.rs  streamattn_qkt.rs  streamattn_reduce.rs
src/test/: flashattn.rs  incremental_unit_test.rs  mod.rs  naive_attn.rs  seq_agnostic.rs  streamattn.rs  unit_tests.rs  unittests.rs
