[package]
name = "stream-attn-dam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dam = { git = "https://github.com/stanford-ppl/DAM-RS.git", rev = "ed140a7" }
num = "0.4.0"
ndarray = "0.15.6"
crossbeam = "0.8.2"
derive_more = "0.99.17"
thiserror = "1.0.50"
graphviz-rust = {version = "0.6.6", optional = true}

[features]
default = ["dot"]
dot = ["dep:graphviz-rust"]